--- a/inventories/host.ini
+++ b/inventories/host.ini
@@ -1,2 +1,2 @@
 [web]
-Shop ansible_host=192.10.0.5 ansible_become=true ansible_user=vagrant
+Shop ansible_host=192.10.0.5 ansible_become=true ansible_user=vagrant ansible_private_key_file='/home/paula/Documentos/vagrant/.vagrant/machines/Shop/virtualbox/private_key'
