--- a/roles/mysql/tasks/install.yml
+++ b/roles/mysql/tasks/install.yml
@@ -1,10 +1,59 @@
 - name: Ensure install mysql
   apt: name={{ item }} state=present # enabled=yes
   with_items:
-    - mysql-server
+    #- mysql-server
+    - mysql-server-5.6
+    - python-pip 
+    - python-dev 
+    - libmysqlclient-dev
   tags: mysqlInstall
 
+#- name: Install with pip MySQL-python
+#  pip: name= {{ item }} state=present
+#  with_items:
+#    - MySQL-python
 
-- name: Crear estructura de bases de datos
-  shell: mysql -u {{ configuration.mysql.user }} -p {{ configuration.mysql.password }}
-  tags: probar conexion
+- name: Install MySQL-python with pip
+  shell: pip install MySQL-python
+
+- name: Create a new database with name
+  mysql_db:
+    state: present
+    name: bob_{{ item }}
+  with_items:
+    - ar
+    - ar_hp
+    - cl
+    - cl_hp
+    - co
+    - co_av
+    - co_hp
+    - ec
+    - mx
+    - mx_cp
+    - mx_hp
+    - pa
+    - pe
+    - pe_av
+    - pe_hp
+    - ve
+  tags: create_database
+
+- name: Ensure copy database
+  copy:
+    src: bob_cl_SD.sql
+    dest: /tmp
+    mode: 0777
+  tags: copy
+
+- name: Import file.sql similar to mysql -u <username> -p <password> < hostname.sql
+  mysql_db:
+    name: bob_cl
+    login_user: root 
+    login_password: ''
+    state: import
+    target: /tmp/bob_cl_SD.sql
+  with_items:
+    - cl
+    #- ar-hp
+  tags: import
